# halo2-link-circuit

./: .gitignore  Cargo.toml
bench/circuit-info/: Cargo.toml
bench/circuit-info/src/: main.rs
bench/end-to-end/: Cargo.toml  batch_run.sh  run.sh
bench/end-to-end/src/: main.rs
src/: circuit.rs  lib.rs
